# anthills

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
anthills/: __init__.py  agent.py  board.py  colony.py  llm.py  pheromone.py  tools.py  worker.py
anthills/connectors/: __init__.py  base.py  registry.py
anthills/connectors/gmail/: __init__.py
anthills/connectors/slack/: __init__.py
anthills/environments/: __init__.py  t1d.py
anthills/integrations/: __init__.py  claude.py
anthills/templates/: __init__.py  base.py  builtins.py  catalog.py  instantiator.py
backend/: agents.py  ledger.py  server.py  simulate_jobs.py
examples/: T1D_README.md  connectors_demo.py  research_agents.py  stigmergy_demo.py  t1d_simulation.py  templates_demo.py
examples/small_business/: README.md  content_moderation.py  invoice_processing.py  lead_qualification.py  research_assistant.py  support_triage.py
tests/: __init__.py  test_board.py  test_claude_integration.py  test_colony.py  test_connectors.py  test_pheromone.py  test_templates.py  test_worker.py
ui/: index.html  package-lock.json  package.json  tailwind.config.js
ui/src/: App.tsx  index.css  store.ts  types.ts
ui/src/components/: Layout.tsx
ui/src/pages/: BoardView.tsx  Dashboard.tsx  EventLog.tsx  LedgerView.tsx  ServiceRequests.tsx  WorkersView.tsx
