[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anthills"
version = "0.1.0"
description = "Multi-agent coordination through stigmergy - agents coordinate via environmental traces, not explicit messaging"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Daniel Brasuell", email = "daniel@t1dm.ai"}
]
keywords = [
    "agents",
    "multi-agent",
    "swarm",
    "stigmergy",
    "pheromones",
    "llm",
    "claude",
    "anthropic",
    "ai",
    "coordination",
    "emergent-behavior"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
claude = [
    "anthropic>=0.40.0",
]
gmail = [
    "google-api-python-client>=2.0.0",
    "google-auth>=2.0.0",
]
slack = [
    "slack-sdk>=3.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/DBrasuell/anthills"
Repository = "https://github.com/DBrasuell/anthills"
Documentation = "https://github.com/DBrasuell/anthills#readme"
Issues = "https://github.com/DBrasuell/anthills/issues"

[tool.hatch.build.targets.wheel]
packages = ["anthills"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.git",
    "/twitter-posting",
    "/.github",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
